--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "koa-bodyparser": "3.2.0",
     "koa-router": "7.0.0",
     "koa2-cors": "^2.0.6",
+    "moment": "^2.24.0",
     "mysql": "^2.16.0",
     "sequelize": "3.24.1",
     "uuid": "^3.3.2"
