--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "koa": "^2.6.2",
+    "koa-body": "^4.1.0",
     "koa-bodyparser": "3.2.0",
     "koa-router": "7.0.0",
+    "koa-send": "^5.0.0",
     "koa2-cors": "^2.0.6",
     "moment": "^2.24.0",
     "mysql": "^2.16.0",
